Added directional heat definitions to blocks. Enabled adv lift on total drag.

--- a/SEDrag.csproj
+++ b/SEDrag.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Core.cs" />
     <Compile Include="DragDefinition\DragData.cs" />
     <Compile Include="DragDefinition\DragDefinition.cs" />
+    <Compile Include="GridHeatData.cs" />
     <Compile Include="HeatDefinition\HeatData.cs" />
     <Compile Include="HeatDefinition\HeatDefinition.cs" />
     <Compile Include="LiftDefinition\LiftData.cs" />
